tests/rpm-pkgs/popt-1.18-6.fc35/output-exp@valgrind/scan-results.err
Error: VALGRIND_WARNING:
popt-1.18/tests/.libs/test1: note: while executing process 1482 with arguments: --grabbar boggle
popt-1.18/src/popt.c:1126: warning[Leak_DefinitelyLost]: 10 bytes in 1 blocks are definitely lost in loss record 2 of 2
popt-1.18/src/popt.c:1126: note: called from UnknownInlinedFun()
popt-1.18/src/popt.c:1419: note: called from UnknownInlinedFun()
popt-1.18/src/popt.c:1215: note: called from poptGetNextOpt()
popt-1.18/tests/test1.c:211: note: called from main()
# 1124|       case POPT_ARG_STRING:
# 1125|   	/* XXX memory leak, application is responsible for free. */
# 1126|-> 	arg.argv[0] = (con->os->nextArg) ? xstrdup(con->os->nextArg) : NULL;
# 1127|   	break;
# 1128|   

Error: VALGRIND_WARNING:
popt-1.18/tests/.libs/test1: note: while executing process 1428 with arguments: --arg2=aaaa -2 bbbb
popt-1.18/src/popt.c:1126: warning[Leak_DefinitelyLost]: 10 bytes in 2 blocks are definitely lost in loss record 3 of 3
popt-1.18/src/popt.c:1126: note: called from UnknownInlinedFun()
popt-1.18/src/popt.c:1419: note: called from UnknownInlinedFun()
popt-1.18/src/popt.c:1215: note: called from poptGetNextOpt()
popt-1.18/tests/test1.c:211: note: called from main()
# 1124|       case POPT_ARG_STRING:
# 1125|   	/* XXX memory leak, application is responsible for free. */
# 1126|-> 	arg.argv[0] = (con->os->nextArg) ? xstrdup(con->os->nextArg) : NULL;
# 1127|   	break;
# 1128|   

Error: VALGRIND_WARNING:
popt-1.18/tests/.libs/test1: note: while executing process 1455 with arguments: --grab bingo boggle
popt-1.18/src/popt.c:1126: warning[Leak_DefinitelyLost]: 12 bytes in 1 blocks are definitely lost in loss record 2 of 2
popt-1.18/src/popt.c:1126: note: called from UnknownInlinedFun()
popt-1.18/src/popt.c:1419: note: called from UnknownInlinedFun()
popt-1.18/src/popt.c:1215: note: called from poptGetNextOpt()
popt-1.18/tests/test1.c:211: note: called from main()
# 1124|       case POPT_ARG_STRING:
# 1125|   	/* XXX memory leak, application is responsible for free. */
# 1126|-> 	arg.argv[0] = (con->os->nextArg) ? xstrdup(con->os->nextArg) : NULL;
# 1127|   	break;
# 1128|   

Error: VALGRIND_WARNING:
popt-1.18/tests/.libs/test1: note: while executing process 1050 with arguments: -I --arg2 foo
popt-1.18/src/popt.c:1126: warning[Leak_DefinitelyLost]: 4 bytes in 1 blocks are definitely lost in loss record 2 of 2
popt-1.18/src/popt.c:1126: note: called from UnknownInlinedFun()
popt-1.18/src/popt.c:1419: note: called from UnknownInlinedFun()
popt-1.18/src/popt.c:1215: note: called from poptGetNextOpt()
popt-1.18/tests/test1.c:211: note: called from main()
# 1124|       case POPT_ARG_STRING:
# 1125|   	/* XXX memory leak, application is responsible for free. */
# 1126|-> 	arg.argv[0] = (con->os->nextArg) ? xstrdup(con->os->nextArg) : NULL;
# 1127|   	break;
# 1128|   

Error: VALGRIND_WARNING:
popt-1.18/tests/.libs/test1: note: while executing process 1428 with arguments: --arg2=aaaa -2 bbbb
popt-1.18/src/popt.c:1126: warning[Leak_DefinitelyLost]: 5 bytes in 1 blocks are definitely lost in loss record 2 of 3
popt-1.18/src/popt.c:1126: note: called from UnknownInlinedFun()
popt-1.18/src/popt.c:1419: note: called from UnknownInlinedFun()
popt-1.18/src/popt.c:1215: note: called from poptGetNextOpt()
popt-1.18/tests/test1.c:219: note: called from main()
# 1124|       case POPT_ARG_STRING:
# 1125|   	/* XXX memory leak, application is responsible for free. */
# 1126|-> 	arg.argv[0] = (con->os->nextArg) ? xstrdup(con->os->nextArg) : NULL;
# 1127|   	break;
# 1128|   

Error: VALGRIND_WARNING:
popt-1.18/tests/.libs/test1: note: while executing process 1860 with arguments: --optional=yadda
popt-1.18/src/popt.c:1126: warning[Leak_DefinitelyLost]: 6 bytes in 1 blocks are definitely lost in loss record 2 of 2
popt-1.18/src/popt.c:1126: note: called from UnknownInlinedFun()
popt-1.18/src/popt.c:1419: note: called from UnknownInlinedFun()
popt-1.18/src/popt.c:1215: note: called from poptGetNextOpt()
popt-1.18/tests/test1.c:211: note: called from main()
# 1124|       case POPT_ARG_STRING:
# 1125|   	/* XXX memory leak, application is responsible for free. */
# 1126|-> 	arg.argv[0] = (con->os->nextArg) ? xstrdup(con->os->nextArg) : NULL;
# 1127|   	break;
# 1128|   

Error: VALGRIND_WARNING:
popt-1.18/tests/.libs/test1: note: while executing process 1995 with arguments: -2foo=bar
popt-1.18/src/popt.c:1126: warning[Leak_DefinitelyLost]: 8 bytes in 1 blocks are definitely lost in loss record 2 of 2
popt-1.18/src/popt.c:1126: note: called from UnknownInlinedFun()
popt-1.18/src/popt.c:1419: note: called from UnknownInlinedFun()
popt-1.18/src/popt.c:1215: note: called from poptGetNextOpt()
popt-1.18/tests/test1.c:211: note: called from main()
# 1124|       case POPT_ARG_STRING:
# 1125|   	/* XXX memory leak, application is responsible for free. */
# 1126|-> 	arg.argv[0] = (con->os->nextArg) ? xstrdup(con->os->nextArg) : NULL;
# 1127|   	break;
# 1128|   
